--- a/apps/marketing/src/pages/index.astro
+++ b/apps/marketing/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
-import Welcome from '../components/Welcome.astro';
+import HeroSection from '../components/HeroSection.astro';
 import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout>
-	<Welcome />
+<HeroSection/>
 </Layout>
