--- a/apps/marketing/src/pages/index.astro
+++ b/apps/marketing/src/pages/index.astro
@@ -1,8 +1,10 @@
 ---
+import Footer from '../components/Footer.astro';
 import HeroSection from '../components/HeroSection.astro';
 import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout>
 <HeroSection/>
+<Footer/>
 </Layout>
